    Java 1.4.0 or Java 1.4.1.
  - Fixed bug #1063006: log.xml with alpha DTD fails if no server reachable.

* Generation of types Java code:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.
  - Added new types float32 and float64.
  - Added new type base64.

* Logdoc:
  - Added new types float32 and float64.

* Libraries:
  - Updated Apache Jakarta Commons HttpClient from 2.0.1 to 2.0.2.

* Added support for the -version argument for the xins commands.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 RELEASE CANDIDATE 2:

* XINS/Java Client Framework:
  - Removed deprecated methods from class DataElement:
    . public Iterator getChildren()
    . public Iterator getChildren(String name)

* Generated CAPI classes:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.

* Generation of specification documentation:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.

* Generation of server-side Java code:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.
  - Fixed bug #1063006: log.xml with alpha DTD fails if no server reachable.

* Generation of types Java code:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 RELEASE CANDIDATE 1:

* No changes compared to XINS 1.0.0-beta11.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 BETA 11:

* XINS/Java Client Framework:
  - Improved the interface of class DataElement:
    . Replaced getChildren(), which returns an nullable Iterator, with
      getChildElements(), which returns a non-nullable List. The former method