@@ -1,6 +1,8 @@
 # Version number for XINS.
 
 #Mon Oct 25 09:56:19 CEST 2004
-version.minor=1.0-alpha1
-version.suffix=-dev
 version.major=1
+version.medium=1
+version.minor=0-alpha
+version.build=1
+version.suffix=-dev
